--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
